2012-02-09  Nick Alcock  <nick.alcock@oracle.com>

	* uts/common/sys/dtrace.h (DTRACEOPT_QUIETRESIZE): New.
	(DTRACEOPT_MAX): Adjust.

	* libdtrace/dt_options.c (_dtrace_drtoptions): Set it
	when "quietresize" is requested...
	* cmd/dtrace.c (main): ... and here, when -t is on.
	(go): Do not emit buffer-resizing warnings in this case.

	* test/unittest/buffering/err.resize1.d: Turn it off explicitly.
	* test/unittest/buffering/err.resize2.d: Likewise.
	* test/unittest/buffering/err.resize3.d: Likewise.
	* test/unittest/buffering/tst.resize1.d: Likewise.
	* test/unittest/buffering/tst.resize2.d: Likewise.
	* test/unittest/buffering/tst.resize3.d: Likewise.

2012-02-09  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/Build: Relink drti.o correctly if headers change.
	Do not fail if the drti.o symlink already exists.

2012-02-07  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/Build: Install .d files into a subdirectory of the
	objdir, not the builddir.  Symlink drti.o in there too.
	* runtest.sh: Pass that new location to dtrace.

	* cmd/dtrace.c (main): Set the syslibdir from the value of the -t
	option, rather than setting to a hardwired value.

	* libdtrace/dt_impl.h (_dtrace_libdir): Remove: its value is fixed at
	compile-time, so it should not be used for anything other than setting a
	default.
	* libdtrace/dt_link.c (dtrace_program_link): Use the item at the head of
	the dt_lib_path, rather than the hardwired _dtrace_libdir.
	* libdtrace/dt_open.c (_dtrace_libdir): Make static.
	(_dtrace_defcpp): Likewise.
	(_dtrace_defld): Likewise.
	(_dtrace_provdir): Likewise.

2012-02-06  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace.spec: Set version number for release.
	* test/unittest/buffering/err.resize*.d: Boost the timeout.
	* test/unittest/buffering/tst.resize*.d: Likewise.
	* test/unittest/buffering/tst.resize*.r: Adjust expected results.

2012-01-31  Nick Alcock  <nick.alcock@oracle.com>

	* cmd/dtrace.c (main): New argument for -t option, disabling